Java 1.8 isBlank -> isEmpty